<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ModifyProductActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="5dp"
            android:layout_marginRight="5dp"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin"
            tools:context=".ModifyProduct">

            <LinearLayout
                android:id="@+id/gtin_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_gtin_label"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/gtin_value"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/name_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/gtin_row"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_name_label"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/title_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/product_name_hint"
                    android:inputType="textCapSentences" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/subtitle_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/name_row"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_variant_label"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/subtitle_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/product_variant_hint"
                    android:inputType="textCapSentences" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/brand_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/subtitle_row"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_brand_label"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/brand_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:hint="@string/product_brand_hint"
                    android:inputType="textCapSentences" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/status_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/brand_row"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="6dp"
                    android:text="@string/product_status_label"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <CheckBox
                    android:id="@+id/product_contains_bodyparts"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_contains_bodyparts" />

                <CheckBox
                    android:id="@+id/product_contains_animal_milk"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_contains_animal_milk" />

                <CheckBox
                    android:id="@+id/product_contains_eggs"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_contains_eggs" />

                <CheckBox
                    android:id="@+id/product_contains_honey"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_contains_honey" />

                <CheckBox
                    android:id="@+id/product_contains_animal_additives"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_contains_animal_additives" />

                <CheckBox
                    android:id="@+id/product_is_animal_tested"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_is_animal_tested" />

                <CheckBox
                    android:id="@+id/product_contains_other_animal_derived"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:checked="false"
                    android:text="@string/product_contains_other_animal_derived" />
            </LinearLayout>

            <LinearLayout
                android:id="@+id/other_animal_derived_row"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/status_row"
                android:layout_marginTop="10dp"
                android:gravity="center_vertical"
                android:orientation="vertical"
                android:visibility="gone">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/product_other_animal_derived_label"
                    android:textSize="20sp"
                    android:textStyle="bold" />

                <EditText
                    android:id="@+id/product_other_animal_derived_edit"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:gravity="left|top"
                    android:hint="@string/product_other_animal_derived_hint"
                    android:inputType="textCapSentences|textMultiLine" />

            </LinearLayout>

            <EditText
                android:id="@+id/commentary_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/other_animal_derived_row"
                android:layout_marginTop="10dp"
                android:ems="10"
                android:gravity="left|top"
                android:hint="@string/user_commentary_hint"
                android:inputType="textCapSentences|textMultiLine"
                android:lines="2" />

            <Button
                android:id="@+id/submit_button"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/commentary_edit"
                android:layout_centerHorizontal="true"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:layout_marginTop="10dp"
                android:background="@drawable/rounded_corners_green_bg"
                android:padding="10dp"
                android:text="@string/product_modification_submit_label"
                android:textSize="20sp" />

        </RelativeLayout>

    </ScrollView>

    <!-- frame two -->

    <RelativeLayout
        android:id="@+id/progressbar"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#aa000000"
        android:visibility="gone">

        <ProgressBar
            style="@android:style/Widget.ProgressBar.Inverse"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_centerVertical="true" />

    </RelativeLayout>

</FrameLayout>