<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/scrollView"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".wizard.RequestMetaInformation.MetaInformationFragment">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:id="@+id/gtin_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_gtin_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/gtin_value"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/name_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/gtin_row"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_name_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/title_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/product_name_hint"
                android:inputType="textCapSentences" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/subtitle_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/name_row"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_variant_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/subtitle_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/product_variant_hint"
                android:inputType="textCapSentences" />

        </LinearLayout>

        <LinearLayout
            android:id="@+id/brand_row"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/subtitle_row"
            android:layout_marginTop="10dp"
            android:gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/product_brand_label"
                android:textSize="20sp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/brand_edit"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:hint="@string/product_brand_hint"
                android:inputType="textCapSentences" />

        </LinearLayout>

        <EditText
            android:id="@+id/commentary_edit"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/brand_row"
            android:layout_marginTop="10dp"
            android:ems="10"
            android:gravity="left|top"
            android:hint="@string/user_commentary_hint"
            android:inputType="textCapSentences|textMultiLine"
            android:lines="2" />


        <Button
            android:id="@+id/next_wizard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentRight="true"
            android:layout_below="@+id/commentary_edit"
            android:layout_marginTop="10dp"
            android:text="@string/action_next" />

        <Button
            android:id="@+id/cancel_wizard_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/commentary_edit"
            android:layout_marginRight="50dp"
            android:layout_marginTop="10dp"
            android:layout_toLeftOf="@+id/next_wizard_button"
            android:text="@string/action_cancel" />

    </RelativeLayout>

</ScrollView>